# vs-adjust

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: autotag.yml  docs.yml  lint.yml  pypipublish.yml
vsadjust/: __init__.py  _metadata.py  borders.py  colorspace.py  edges.py  levels.py  shift.py  tweaking.py
